# Vhisper

./: .gitignore  bump.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: SWIFT_INTEGRATION.md
src/: App.vue  app.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/crates/vhisper-core/: Cargo.toml  build-xcframework.sh
src-tauri/crates/vhisper-core/include/: vhisper_core.h
src-tauri/crates/vhisper-core/src/: ffi.rs  lib.rs
src-tauri/crates/vhisper-core/src/asr/: mod.rs  openai_whisper.rs  qwen_realtime.rs  traits.rs
src-tauri/crates/vhisper-core/src/audio/: recorder.rs
src-tauri/crates/vhisper-core/src/config/: mod.rs  storage.rs
src-tauri/crates/vhisper-core/src/pipeline/: mod.rs  voice.rs
src-tauri/crates/vhisper-core/swift-demo/: VhisperBridge.swift  build-and-run.sh  main.swift  vhisper-demo
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/asr/: dashscope.rs  funasr.rs  mod.rs  qwen.rs  traits.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/commands/: audio.rs  config.rs  mod.rs  permissions.rs  test.rs
src-tauri/src/config/: mod.rs  settings.rs
src/components/: RecordingIndicator.vue  Settings.vue
swift/: deploy.sh
swift/VhisperCore.xcframework/: Info.plist
swift/vhisper/: Info.plist  VhisperBridge.swift  vhisper.entitlements  vhisperApp.swift
swift/vhisper.xcodeproj/: project.pbxproj
swift/vhisperTests/: vhisperTests.swift
swift/vhisperUITests/: vhisperUITests.swift  vhisperUITestsLaunchTests.swift
(+20 files in other folders)
